# GGpyManager

./: .flake8  .gitignore  .readthedocs.yaml  README.md  environment-docs.yml  environment-test.yml  pyproject.toml  pytest.ini  setup.py
docs/: api.rst  conf.py  getting_started.rst  ggpymanager.rst  index.rst  install.rst  modules.rst  requirements.txt  structure.dot
docs/notebooks/: example.ipynb
ggpymanager/: __init__.py  catalog.py  cli.py  cli_functions.py  config.py  gramm_geometry.py  read_gramm_geometry.py  reader.py  simulation.py  utils.py  utils_legacy.py
ggpymanager/analysis/: __init__.py  loss_functions.py  stability.py  vertical_gradients.py
ggpymanager/data/: catalogue_filter.csv  file_conventions.yml  gramm_corine.csv  gramm_gral_files_information.yml
ggpymanager/io/: __init__.py  file_api.py  parsers.py  readers.py  writers.py
ggpymanager/models/: __init__.py  catalog.py  dataclasses.py
ggpymanager/processing/: __init__.py  concentration.py  geometry.py  google_earth.py  landuse.py  wind.py
ggpymanager/utils/: __init__.py  decorators.py  logging.py  projections.py  units.py
notebooks/: example.ipynb
tests/: TESTING.md  TEST_INDEX.md  conftest.py  context.py  test_analysis_loss_functions.py  test_analysis_stability.py  test_catalog.py  test_catalog_template.py  test_cli.py  test_cli_functions.py  test_data_file_conventions.py  test_integration.py  test_io_parsers.py  test_io_readers.py  test_io_writers.py  test_models_catalog.py  test_processing_geometry.py  test_processing_wind.py  test_simulation.py  test_utils.py  test_utils_decorators.py  test_utils_projections.py  test_utils_units.py
tests/assets/gramm_catalog/config/: GRAMM.geb  landuse.asc  meteopgt.all
tests/assets/gramm_catalog/simulations/sim_0001/: 00001.wnd  gramm-log.txt
