[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Robert Maiwald", email = "robert.maiwald@uni-heidelberg.de"},
]
description = "Python module to manage Gramm Gral runs and storage."
license = {text = "MIT"}
name = "ggpymanager"
readme = "README.md"
version = "1.0.0"

# dependencies = [] # Dependencies should be installed with conda
