[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Robert Maiwald", email = "robert.maiwald@uni-heidelberg.de"},
]
description = "Python module to manage Gramm Gral runs and storage."
license = {text = "MIT"}
name = "ggpymanager"
readme = "README.md"
version = "1.0.0"

# dependencies = [] # Dependencies should be installed with conda

[project.scripts]
ggpymanager = "ggpymanager.cli:main"

[tool.pytest.ini_options]
# Alternative to pytest.ini - can be used instead
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
# Coverage configuration
source = ["ggpymanager"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/__init__.py",
]
branch = true

[tool.coverage.report]
# Coverage reporting
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"